<resources>
    <string name="app_name">Axleshift</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Axleshift</string>
    <string name="nav_header_subtitle">mrepol742@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="faq">Faq</string>
    <string name="customer_service">Customer Service</string>
    <string name="sessions">Sessions</string>
    <string name="account_logs">Account Logs</string>
    <string name="invoices">Invoices</string>
    <string name="documents">Documents</string>
    <string name="track">Track</string>
    <string name="shipment">Shipment</string>
    <string name="book_now">Book Now</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="security">Security</string>
    <string name="my_addresses">My Addresses</string>
    <string name="logout">Logout</string>
</resources>