<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/round_dashboard_24"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_book_now"
            android:icon="@drawable/round_add_24"
            android:title="@string/book_now" />

        <item
            android:id="@+id/nav_shipment"
            android:icon="@drawable/round_local_shipping_24"
            android:title="@string/shipment" />

        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/round_location_on_24"
            android:title="@string/track" />

        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/round_insert_drive_file_24"
            android:title="@string/documents" />


        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/round_receipt_24"
            android:title="@string/invoices" />


        <item
            android:id="@+id/nav_account_logs"
            android:icon="@drawable/round_format_list_bulleted_24"
            android:title="@string/account_logs" />

        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/round_devices_24"
            android:title="@string/sessions" />

        <item
            android:id="@+id/nav_customer_service"
            android:icon="@drawable/round_chat_24"
            android:title="@string/customer_service" />


        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/round_question_mark_24"
            android:title="@string/faq" />

    </group>
</menu>