<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:icon="@drawable/round_notifications_24"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_security"
        android:orderInCategory="100"
        android:title="@string/security"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_addresses"
        android:orderInCategory="100"
        android:title="@string/my_addresses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>